--- a/app/src/main/res/layout/item_gridview.xml
+++ b/app/src/main/res/layout/item_gridview.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/grid_item_main_layout"
     android:background="@drawable/gridview_selector">
 
     <ImageView
